# PSVita-MaILFail

./: LICENSE  README.md  make-with-anchor-lister.sh  make-with-keyboard.sh
mailfail-anchor-lister/: README.md
mailfail-anchor-lister/MSDOS/: mailfail_html_maker.bat  mailfail_os0.html  mailfail_os0_lister.bat  mailfail_sa0_lister.bat  mailfail_tm0_lister.bat  mailfail_ur0_lister.bat  mailfail_vd0_lister.bat  mailfail_vs0.html  mailfail_vs0_lister.bat  mailfail_vs0_tarpatch.html  mailfail_vs0_tarpatch_lister.bat
mailfail-installer/: CMakeLists.txt  make.sh
mailfail-installer/base/: mail.db
mailfail-installer/resource/: index.html
mailfail-installer/src/: graphics.c  installer_sqlite.c  installer_sqlite.h  main.c  utils.c  utils.h  vita_net.c  vita_net.h
mailfail-keyboard/: make.sh
mailfail-keyboard/base/: DOM_updater.js  head.html  keyboard.js  magictouch.js
mailfail-usermode/: README.md
